<resources>
    <string name="app_name">LostZOne</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jose Gerardo Rios Sarango</string>
    <string name="nav_header_subtitle">jose.g.rios@unl.edu.ec</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_interfaces">Interfaces</string>
    <string name="menu_sensores">Sensores</string>
    <string name="menu_archivos">Archivos</string>
    <string name="menu_database">Base de Datos</string>
    <string name="menu_webservice">Servicio Web</string>
    <string name="menu_mapas">Mapas</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Enviar</string>
    <string name="invalid_username">Usuario Invalido</string>
    <string name="padoru">PADORU PADORU!!!</string>
    <string name="reyes">Los Reyes Magos</string>
    <string name="actionmi"> Memoria Interna </string>
    <string name="actionSD"> Memoria SD </string>
    <string name="actionprograma"> Programa </string>
    <string name="testamento">
        La aplicacion que ahora se esta ejecutando en tu dispositivo movil,
        es una aplicacion que fue realizada durante las clases de programacion avanzada
        con el fin de aprender programacion de aplicaciones moviles en ANDROID STUDIO
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">MIENTES!</string>
    <string name="title_activity_maps">Map</string>
</resources>
