<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/inicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/eventos"
            android:title="@string/menu_eventos" />
        <item
            android:id="@+id/nav_Interfaces"
            android:icon="@drawable/interfaces"
            android:title="@string/menu_interfaces" />
        <item
            android:id="@+id/nav_sensores"
            android:icon="@drawable/sensores"
            android:title="@string/menu_sensores" />
        <item
            android:id="@+id/nav_archivos"
            android:icon="@drawable/archivos"
            android:title="@string/menu_archivos" />
        <item
            android:id="@+id/nav_database"
            android:icon="@drawable/database"
            android:title="@string/menu_database" />
        <item
            android:id="@+id/nav_webservice"
            android:icon="@drawable/webservice"
            android:title="@string/menu_webservice" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/maps"
            android:title="@string/menu_mapas" />
    </group>

    <item android:title="Comunicacion">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
