<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lostzone.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_eventos"
        android:name="com.example.lostzone.ui.eventos.EventosFragment"
        android:label="@string/menu_eventos"
        tools:layout="@layout/fragment_eventos" />

    <fragment
        android:id="@+id/nav_Interfaces"
        android:name="com.example.lostzone.ui.interfaces.InterfacesFragment"
        android:label="@string/menu_interfaces"
        tools:layout="@layout/fragment_interfaces" />

    <fragment
        android:id="@+id/nav_sensores"
        android:name="com.example.lostzone.ui.sensores.SensoresFragment"
        android:label="@string/menu_sensores"
        tools:layout="@layout/fragment_sensores" />

    <fragment
        android:id="@+id/nav_archivos"
        android:name="com.example.lostzone.ui.archivos.ArchivosFragment"
        android:label="@string/menu_archivos"
        tools:layout="@layout/fragment_archivos" />

    <fragment
        android:id="@+id/nav_database"
        android:name="com.example.lostzone.ui.database.DatabaseFragment"
        android:label="@string/menu_database"
        tools:layout="@layout/fragment_database" />

    <fragment
        android:id="@+id/nav_webservice"
        android:name="com.example.lostzone.ui.webservice.WebserviceFragment"
        android:label="@string/menu_webservice"
        tools:layout="@layout/fragment_webservice" />

    <fragment
        android:id="@+id/nav_maps"
        android:name="com.example.lostzone.ui.maps.MapsFragment"
        android:label="@string/menu_mapas"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.lostzone.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.lostzone.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>